# ece4600

./: LICENSE  README.md
etc/: dnsmasq.conf  hostapd.conf  interfaces  video.sdp
ros/roborescue/: CMakeLists.txt  package.xml
ros/roborescue/launch/: roborescue.launch
ros/roborescue/scripts/: arduino.py  arduino_fwd.py  facialtracking.py  lights.py  operator.py  operator_pub.py  proto.py  video_server.py  videopipelines.py  videoserver.py  videoserver.py.bak
ros/roborescue/src/proto/: proto.py
src/: serial.py
src/arduino/: AGM_BNO055.cpp  AGM_BNO055.h  AbstractAGM.cpp  AbstractAGM.h  AbstractDevice.cpp  AbstractDevice.h  CommunicationPortInterface.cpp  CommunicationPortInterface.h  CommunicationPort_Serial.cpp  CommunicationPort_Serial.h  EncoderInterface.cpp  EncoderInterface.h  Encoder_WheelWatcher.cpp  Encoder_WheelWatcher.h  InterprocessorCommunicationHandler.cpp  InterprocessorCommunicationHandler.h  InterruptHandlerSafety.cpp  InterruptHandlerSafety.h  ManipulatorArm.cpp  ManipulatorArm.h  MotionControl.cpp  MotionControl.h  Motor.cpp  Motor.h  MotorControllerInterface.cpp  MotorControllerInterface.h  MotorController_SaberToothDual25A.cpp  MotorController_SaberToothDual25A.h  MotorPortInterface.cpp  MotorPortInterface.h  MotorPort_SaberToothDual25A.cpp  MotorPort_SaberToothDual25A.h  PriorityQueue.h  RobotTask.cpp  RobotTask.h  Robot_Arduino_main.h  Robot_Arduino_main_V3.ino  ServoInterface.cpp  ServoInterface.h  Servo_G15.cpp  (+11 more)
src/msg/: cam_motion.msg  man_arm.msg  navigation.msg
