<?xml version="1.0"?>
<package>
  <name>roborescue</name>
  <version>1.0.0</version>
  <description>The ECE 4600 Capstone RoboRescue package</description>

  <maintainer email="umgre223@myumanitoba.ca">Josh Greenberg</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/savoi/ece4600</url>
  <author email="umgre223@myumanitoba.ca">Josh Greenberg</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
